--- a/about.html
+++ b/about.html
@@ -62,31 +62,35 @@
                      </h2>
            </div>
             </div>
-           <div class="container6 container-fluid">
+           <div class="container6">
                <div class="container7">
-                  <div class="row container">
-                    <article class="col-sm-6  py-4">
+                <div class="container">
+                  <div class="row py-3">
+                    <article class="col-sm-6 align-self-center">
                       <h4 class="font-weight-bolder">Our story</h4>
                         <p class="story">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, porro reiciendis reprehenderit cum vitae necessitatibus perferendis perspiciatis exercitationem 
                             est quod quaerat neque deserunt! Alias omnis vitae, reiciendis recusandae dolor iusto. <br>
                          </p>
                     </article>
-                    <aside class="col-sm-6 py-5">
+                    <aside class="col-sm-6 align-self-center">
                       <img src="buildteam.45d2ac6a.svg" alt="our team">
                     </aside>
                   </div>
-                    <div class="row bg-primary">
-                        <aside class="col-sm-6 py-4">
+                </div>
+                    <div class="container-fluid">
+                      <div class="row bg-primary py-3">
+                        <aside class="col-sm-6 align-self-center">
                             <img src="outsourcingicon.5d5b5987.svg" alt="our team">
                           </aside>
-                        <article class="col-sm-6 py-4">
-                          <h4 class="font-weight-bolder">How we work</h4>
-                            <p class="story">
+                        <article class="col-sm-6 align-self-center">
+                          <h4 class="font-weight-bolder mt-0">How we work</h4>
+                            <p class="story mt-0">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, porro reiciendis reprehenderit cum vitae necessitatibus perferendis perspiciatis exercitationem 
                                 est quod quaerat neque deserunt! Alias omnis vitae, reiciendis recusandae dolor iusto. <br>
                              </p>
                         </article>
+                    </div>
                     </div>
                </div>
            </div>
