--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                                          <h6 class="story">Talk to us</h6>
                                          <p class="story">Call or e-mail us about your online marketing needs.</p>
                                          <div class="story">
-                                            <p> <span class="icon"></span>0000-0000-000 </p>
+                                            <p> <span class="icon"></span><a href="tel:+0000-0000-000">0000-0000-000</a> </p>
                                             <p> <span class="icon"></span><a href="mailto:#">youremail@email.com</a> </p>
                                          </div>
                                          <h6 class="story">Connect with us</h6>
