--- a/services.html
+++ b/services.html
@@ -67,9 +67,9 @@
                           <div class="container" >
                                 <h2 class="text-center text-primary py-3">What we Offer</h2>
                           <div class="row">
-                              <aside class="col-sm-4">
+                              <aside class="col-sm-4 align-self-center">
                                   <div class="logoe"><img src="72.png" alt=""></div>
-                                  <h3 class="sub-title">
+                                  <h3 class="font-weight-bolder">
                                       Social Media Management Services
                                   </h3>
                                   <p class="story">
@@ -77,9 +77,9 @@
                                       exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
                                   </p>
                               </aside>
-                              <section class="col-sm-4">
+                              <section class="col-sm-4 align-self-center">
                                 <div class="logoe"><img src="76.png" alt=""></div>
-                                  <h3 class="sub-title">
+                                  <h3 class="font-weight-bolder">
                                       Digital Marketing Services
                                   </h3>
                                   <p class="story">
@@ -87,10 +87,10 @@
                                       exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
                                   </p>
                               </section>
-                              <aside class="col-sm-4">
+                              <aside class="col-sm-4 align-self-center">
                                 <div class="logoe"><img src="74.png" alt=""></div>
-                                  <h3 class="sub-title">
-                                      Branding Services
+                                  <h3 class="font-weight-bolder">
+                                    Business Branding Services
                                   </h3>
                                   <p class="story">
                                       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
@@ -101,7 +101,7 @@
                                     <h2 class="text-center text-primary py-3">Our approach</h2>
                                     <h3 class="under-title text-center font-weight-bolder pb-3">Three things that make us unique</h3>
                                     <div class="row">
-                                        <aside class="col-sm-4">
+                                        <aside class="col-sm-4 align-self-center">
                                             <div class="logoe"><img src="77.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
                                                 We engage
@@ -111,7 +111,7 @@
                                                 exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
                                             </p>
                                         </aside>
-                                        <section class="col-sm-4">
+                                        <section class="col-sm-4 align-self-center">
                                             <div class="logoe"><img src="75.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
                                                 We influence
@@ -121,7 +121,7 @@
                                                 exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
                                             </p>
                                         </section>
-                                        <aside class="col-sm-4">
+                                        <aside class="col-sm-4 align-self-center">
                                             <div class="logoe"><img src="76.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
                                                We promote
