--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="#" class="logo"><img src="02.png" alt="brand-logo" class="brand-logo my-2"></a>
+                        <a href="#" class="logo"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -58,8 +58,8 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <div class="rowe">
-                            <div class="leftt py-5">
-                                <h2 class="font text-primary py-3 font-weight-bolder">Open your Business to a World of Endless Audience</h1>
+                            <div class="leftt py-5 mt-5">
+                                <h2 class="font text-primary font-weight-bolder">Open your Business to a World of Endless Audience</h1>
                                     <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
                                     <button class="bg-dark my-4"><a class="nav-link" href="#here">Get Started<span class="icon"></span></a></button>
                             </div>
@@ -71,7 +71,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="bag pt-5">
+                        <div class="bag mt-5 pt-4">
                             <h4 class="wordCarousel font-weight-bolder">    
                                 <h5 class="text-primary">Get more: </h5>  
                                 <div class="dive"> 
@@ -88,19 +88,17 @@
                     <div class="side pt-3">
                             <img src="croonials-banner-image.webp" alt="Audience">
                     </div>
-                    <button class="bg-dark mt-3"><a class="nav-link" href="contact.html">GET A FREE QUOTE <span class="icon"></span></a></button>
+                    <button class="bg-dark my-4"><a class="nav-link" href="contact.html">GET A FREE QUOTE <span class="icon"></span></a></button>
                         </div>
                       <div class="carousel-item">
-                        <div class="rowe pt-4">
+                        <div class="rowe pt-4 mt-5">
                             <div class="leftt">
-                                <div class="font py-3">
-                                    <h2 class="text-primary font-weight-bolder pb-2">
+                                    <h2 class="font text-primary font-weight-bolder">
                                     Ace Media is one of Nigeria's Leading Social & Digital Marketing
                                      Agency with Audience of over 25,000 people.
                                 </h2>
                                      <h4 class="text-primary ">We offer First-Class Social media marketing & World class audience to Businesses of all sizes</h2>
-                                    </div>
-                                    <button class="bg-dark"><a class="nav-link" href="#here">Get Started<span class="icon"></span></a></button>
+                                    <button class="bg-dark my-3"><a class="nav-link" href="#here">Get Started<span class="icon"></span></a></button>
                             </div>
                             <div>
                                 <div  class="py-5 side-picture">
@@ -126,7 +124,7 @@
    </div> -->
   <div class="container">
         <div class="row">
-                <div class="col-sm-6" id="here">
+                <div class="col-sm-6 align-self-center" id="here">
                       <h2 class="text-center text-primary py-3">Here To Serve You</h2>
                       <p class="story">
                           Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -134,16 +132,16 @@
                            culpa expedita! Qui voluptatum nihil non alias molestias, quasi harum enim aperiam?
                       </p>
                 </div>
-                <div class="col-sm-6">
-                        <img src="2796424.png" alt="">
+                <div class="col-sm-6 align-self-center">
+                        <img src="2796424.png" alt="working">
                 </div>
             </div>
             <div class="row">
-                    <div class="col-sm-6">
-                            <img src="2796375-1.png" alt="">
+                    <div class="col-sm-6 align-self-start">
+                            <img src="2796375-1.png" alt="growing">
                     </div>
-                    <div class="col-sm-6" id="here">
-                          <h2 class="text-center text-primary py-3">Our Achievements Over The Years</h2>
+                    <div class="col-sm-6 align-self-center" id="here">
+                          <h2 class="text-center text-primary ">Our Achievements Over The Years</h2>
                           <p class="story">
                               Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                               Perspiciatis eaque consectetur voluptas fuga ex reiciendis quos natus asperiores,
