--- a/review.html
+++ b/review.html
@@ -21,7 +21,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav navbar-right mr-auto">
                             <li class="nav-item active">
-                              <a class="nav-link" href="#home">HOME <span class="sr-only">(current)</span></a>
+                              <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="about.html">ABOUT</a>
@@ -30,7 +30,7 @@
                                  <a class="nav-link" href="services.html">SERVICES</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="review.html">REVIEWS</a>
+                                <a class="nav-link" href="#review">REVIEWS</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">CONTACT</a>
@@ -53,7 +53,7 @@
                     </nav>
 
     </header>
-        <div class="container4  fixed-attachment">
+        <div class="container4  fixed-attachment" id="review">
                 <div class="container-fluid fixed-attachment py-5" style="background-image: url('black-and-white-photo-of-drone-2050718.jpg');height: 60vh;">
                         <div class="bg-infor py-5" id="services" >
                              <h2 class="display-4 py-5 text-primary">
