--- a/contact.html
+++ b/contact.html
@@ -66,23 +66,20 @@
                                                      <label for="name" class="font-weight-bold">Name <span>*</span></label><br>
                                                     <div class="row pb-2">
                                                         <div class="col-lg-6 pb-2">
-                                                         <input type="text" name="firstname" required id="firstname" placeholder="first name">
+                                                         <input type="text" name="firstname" required id="firstname" placeholder="first name" class="py-1">
                                                         </div>
                                                         <div class="col-lg-6">
-                                                         <input type="text" required name="lastname" id="firstname" placeholder="last name">
+                                                         <input type="text" required name="lastname" id="firstname" placeholder="last name" class="py-1">
                                                         </div>
                                                     </div>
                                                     <label for="email" class="font-weight-bold">Email <span>*</span></label><br>
                                                      <div class="row pb-2">
                                                          <div class="col-lg-6 pb-2">
-                                                             <input type="email" required name="email" id="email" placeholder="your email">
-                                                         </div>
-                                                         <div class="col-lg-6">
-                                                             <input type="email" name="email" id="email" placeholder="confirm email">
+                                                             <input type="email" required name="email" id="email" placeholder="your email" class="py-1">
                                                          </div>
                                                      </div>
                                                      <label for="phone-number" class="font-weight-bold">Phone <span>*</span></label><br>
-                                                     <input type="tel" class="mb-3" name="phone-number" id="phone-number" placeholder="phone number"><br>
+                                                     <input type="tel" class="mb-3" name="phone-number" id="phone-number" placeholder="phone number" class="py-1"><br>
                                                      <label for="name" class="font-weight-bold">Message<span>*</span></label><br>
                                                      <textarea name="message" rows="5" cols="30" placeholder="YOUR MESSAGE"></textarea><br>
                                                      <button type="submit" class="mt-4 mb-4 bg-dark">SUBMIT</button>
